# PoseR

./: .gitignore  .pre-commit-config.yaml  =42.0.0  COPILOT_CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari-hub/: DESCRIPTION.md  config.yml
docs/: QuickStart.md  Test.md  UserGuide.md
lightning_logs/version_0/: events.out.tfevents.1682924647.LAPTOP-KN46APBH.15720.0  hparams.yaml
poser-env/share/python-wheels/: CacheControl-0.12.6-py2.py3-none-any.whl  appdirs-1.4.3-py2.py3-none-any.whl  certifi-2019.11.28-py2.py3-none-any.whl  chardet-3.0.4-py2.py3-none-any.whl  colorama-0.4.3-py2.py3-none-any.whl  contextlib2-0.6.0-py2.py3-none-any.whl  distlib-0.3.0-py2.py3-none-any.whl  distro-1.4.0-py2.py3-none-any.whl  html5lib-1.0.1-py2.py3-none-any.whl  idna-2.8-py2.py3-none-any.whl  ipaddr-2.2.0-py2.py3-none-any.whl  lockfile-0.12.2-py2.py3-none-any.whl  msgpack-0.6.2-py2.py3-none-any.whl  packaging-20.3-py2.py3-none-any.whl  pep517-0.8.2-py2.py3-none-any.whl  pip-20.0.2-py2.py3-none-any.whl  pkg_resources-0.0.0-py2.py3-none-any.whl  progress-1.5-py2.py3-none-any.whl  pyparsing-2.4.6-py2.py3-none-any.whl  requests-2.22.0-py2.py3-none-any.whl  retrying-1.3.3-py2.py3-none-any.whl  setuptools-44.0.0-py2.py3-none-any.whl  six-1.14.0-py2.py3-none-any.whl  toml-0.10.0-py2.py3-none-any.whl  urllib3-1.25.8-py2.py3-none-any.whl  webencodings-0.5.1-py2.py3-none-any.whl  wheel-0.34.2-py2.py3-none-any.whl
src/poser/: __init__.py  _loader.py  _widget.py  api.py  napari.yaml  utils.py
src/poser/_panels/: __init__.py  _factories.py  analysis_panel.py  annotation_panel.py  data_panel.py  ethogram_panel.py  inference_panel.py  train_panel.py
src/poser/_panels/helpers/: __init__.py  points_manager.py
src/poser/_tests/: __init__.py  decoder_config.yml  test_napari_import.py  test_stgcn_lstm.py  test_widget.py  test_widget_updated.py
src/poser/_tests/data/PoseRTestData/: decoder_config.yml
src/poser/_tests/data/PoseRTestData/lightning_logs/version_106/: events.out.tfevents.1659367239.kennedy13.143666.0
src/poser/_tests/lightning_logs/version_106/: hparams.yaml
src/poser/cli/: __init__.py  main.py
src/poser/core/: __init__.py  augmentation.py  batch.py  bout_detection.py  dataset.py  frame_export.py  io.py  metrics.py  preprocessing.py  session.py
src/poser/models/: __init__.py  _loader.py  base.py  c3d.py  gconv.py  gconv_origin.py  graph.py  registry.py  st_gcn_aaai18.py  st_gcn_aaai18_pylightning.py  st_gcn_aaai18_pylightning_2block.py  st_gcn_aaai18_pylightning_3block.py  st_gcn_aaai18_pylightning_4block.py  st_gcn_aaai18_pylightning_5block.py  st_gcn_aaai18_pylightning_6block.py  st_gcn_aaai18_pylightning_7block.py  st_gcn_aaai18_pylightning_8block.py  st_gcn_lstm.py  train.py
src/poser/skeletons/: TEMPLATE.yaml  __init__.py  base.py  loader.py  registry.py
src/poser/skeletons/built_in/: coco.yaml  drosophila.yaml  mouse1.yaml  mouse2.yaml  ntu_rgbd.yaml  openpose.yaml  zeb60fps.yaml  zebrafish.yaml  zebrafishlarvae.yaml
src/poser/training/: __init__.py  config.py  data_prep.py  finetune_yolo.py  trainer.py
