[metadata]
name = PoseR-napari

description = A deep learning toolbox for decoding animal behaviour
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnm4sfix/PoseR
author = Pierce Mullen
author_email = pnm1@st-andrews.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/pnm4sfix/PoseR/issues
    Documentation = https://github.com/pnm4sfix/PoseR#README.md
    Source Code = https://github.com/pnm4sfix/PoseR
    User Support = https://github.com/pnm4sfix/PoseR/issues

[options]
packages = find:
install_requires =
    napari[all]==0.4.14
    npe2==0.6.2
    pydantic==1.10.4
    numpy
    magicgui
    qtpy
    napari-video
    napari_plot==0.1.5
    tables
    imageio_ffmpeg==0.4.8
    pytorch_lightning
    test-tube
    scikit-learn
    matplotlib
    numba
    networkx
    seaborn
    ultralytics
    torcheval==0.0.7





python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    PoseR-napari = poser:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
