[metadata]
name = PoseR-napari

description = A deep learning toolbox for decoding animal behaviour
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnm4sfix/PoseR
author = Pierce Mullen
author_email = pnm1@st-andrews.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/pnm4sfix/PoseR/issues
    Documentation = https://github.com/pnm4sfix/PoseR#README.md
    Source Code = https://github.com/pnm4sfix/PoseR
    User Support = https://github.com/pnm4sfix/PoseR/issues

[options]
packages = find:
install_requires =
    napari>=0.5
    npe2
    pydantic>=2.0
    pydantic-settings>=2.0
    numpy
    magicgui
    qtpy
    napari-video
    tables
    imageio_ffmpeg
    lightning>=2.0
    scikit-learn
    matplotlib
    numba
    networkx
    seaborn
    ultralytics
    torch>=2.0
    typer>=0.9
    rich>=13.0
    PyYAML





python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    PoseR-napari = poser:napari.yaml

console_scripts =
    poser = poser.cli.main:main

# Plugin extension points — third parties can register skeletons / models here
poser.skeletons =
    # example: my_species = my_package.skeletons:MySpeciesSpec

poser.models =
    # example: my_arch = my_package.models:MyArch

[options.extras_require]
gpu =
    cupy-cuda12x

testing =
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5

dev =
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5
    pre-commit
    ruff


[options.package_data]
* = *.yaml
poser.skeletons.built_in = *.yaml
